--- a/index.html
+++ b/index.html
@@ -462,8 +462,7 @@
                                 <p class="card-text" style="font-size: 0.9rem;">
                                     a.n Muklis Vebrianto
                                 </p>
-                                <button class="btn btn-light btn-sm" data-nomer="626601023226534" onclick="salin(this)">Salin
-                                    No. Rekening</button>
+                                <button class="btn btn-light btn-sm" data-nomer="626601023226534" onclick="salin(this)">Salin</button>
                             </div>
 
                             <!-- <div class="col-12 card-body border rounded-3 shadow p-3 m-3" style="max-width: 25rem;"
